# cm2025_v07

./: fdgsfdg.txt
application/bt_earphone/src/tr_usound/: CMakeLists.txt  Kconfig  Makefile  tr_usound.h  tr_usound_ctrl.c  tr_usound_dev.c  tr_usound_effect.c  tr_usound_event.c  tr_usound_main.c  tr_usound_media.c  tr_usound_media_profile.c  tr_usound_mic_dev.c.bak  tr_usound_view.c
application/bt_earphone/src/tr_usound/disk/: CMakeLists.txt  Kconfig  disk_access_usb.c  disk_access_usb.h
application/bt_earphone/src/tr_usound/hotplug_manager/: CMakeLists.txt  Kconfig
application/bt_earphone/src/tr_usound/usb_audio_sink/: CMakeLists.txt  usb_audio_sink_handler.c  usb_audio_sink_handler.h
framework/audio/: CMakeLists.txt  Kconfig  audio.lib  audio_aps.c  audio_policy.c  audio_policy.h  audio_record.c  audio_record.h  audio_system.c  audio_system.h  audio_track.c  audio_track.h  audio_tws_aps.c  audio_tws_aps_snoop.c  bluetooth_tws_observer.h  pcm_buffer_stream.c  pcm_buffer_stream.h  volume_manager.c  volume_manager.h
framework/audio/audiolcy/: CMakeLists.txt  audiolcy_adaptive.c  audiolcy_basic.c  audiolcy_entry.c  audiolcy_inner.h  audiolcy_interpolation.c
framework/audio/include/: audiolcy_common.h
framework/base/utils/: CMakeLists.txt
framework/base/utils/acts_ringbuf/: acts_ringbuf.c
framework/base/utils/iterator/: file_plist_iterator.c
framework/base/utils/stream/: fstream.c  loop_fstream.c  ringbuff_stream.c  stream.c
framework/bluetooth/bt_manager/: CMakeLists.txt  bt_manager.c  bt_manager_a2dp.c  bt_manager_adv.c  bt_manager_audio.c  bt_manager_avrcp.c  bt_manager_base.c  bt_manager_ble.c  bt_manager_ble_bqb.c  bt_manager_ble_client_pts.c  bt_manager_check_mac_name.c  bt_manager_config.c  bt_manager_connect.c  bt_manager_dev_info.c  bt_manager_event.c  bt_manager_hfp.c  bt_manager_hfp_ag.c  bt_manager_hid.c  bt_manager_inner.h  bt_manager_le_audio.c  bt_manager_pair.c  bt_manager_pts_test.c  bt_manager_sco.c  bt_manager_spp.c  bt_manager_sppble_stream.c  bt_manager_test_sample.c  tr_bt_manager.c  tr_bt_manager_a2dp.c  tr_bt_manager_audio.c  tr_bt_manager_auto.c  tr_bt_manager_auto_shareme.c  tr_bt_manager_ble_client.c  tr_bt_manager_config.c  tr_bt_manager_inquiry.c  tr_bt_manager_trs.c  tr_bt_manager_trs_conn.c  tr_bt_manager_trs_shell.c  tr_bt_manager_user_api.c  tr_btmanager_shell.c
framework/bluetooth/bt_manager/audio_service/: CMakeLists.txt  Makefile  aics_service.h  ascs_service.c  bass_service.c  cas_service.c  mcs_service.c  mics_service.c  pacs_service.c  tbs_service.c  vcs_service.c  vnd_service.c  vocs_service.h
framework/bluetooth/bt_manager/btmgr_tws/: CMakeLists.txt  btmgr_tws.h
framework/bluetooth/bt_service/: CMakeLists.txt  bt_service_snoop.lib  btsrv_main.c
framework/bluetooth/bt_service/include/: btsrv_inner.h  btsrv_os_common.h  tr_btsrv_inner.h
framework/bluetooth/bt_service/tws_porting/: btsrv_tws.h
framework/bluetooth/bt_stack/src/: CMakeLists.txt  buf.c  common_internal.c  hci_data_log.c  host_interface.c  tr_host_interface.c
framework/display/: CMakeLists.txt  Kconfig  Kconfig.font  Kconfig.lvgl  display.lib  simple_res_manager.c  ui_manager.c  ui_math.c  ui_region.c
framework/display/include/: bitmap_font_api.h  font_mempool.h  freetype_font_api.h  graphic_buffer.h  gui_api.h  msgbox_cache.h  res_manager_api.h  res_mempool.h  ui_manager.h  ui_mem.h  ui_service.h  ui_surface.h  view_cache.h  view_manager.h  view_stack.h
framework/display/include/lvgl/: lvgl_bitmap_font.h  lvgl_freetype_font.h  lvgl_img_loader.h  lvgl_memory.h  lvgl_res_loader.h
framework/display/include/memory/: gui_text_cache.h
framework/display/libdisplay/: CMakeLists.txt  readme.txt
framework/display/libdisplay/bitmap_font/: CMakeLists.txt  bitmap_font_api.c
framework/display/libdisplay/decompress/: CMakeLists.txt
framework/display/libdisplay/freetype/: CMakeLists.txt
framework/display/libdisplay/lvgl/: CMakeLists.txt  lvgl_bitmap_font.c  lvgl_freetype_font.c  lvgl_gpu.c  lvgl_gpu.h  lvgl_input_dev.c  lvgl_res_loader.c  lvgl_sw_gpu.c  lvgl_view.c  lvgl_virtual_display.c  lvgl_virtual_display.h
framework/display/libdisplay/res_manager/: CMakeLists.txt  res_manager_api.c
framework/display/libdisplay/surface/: CMakeLists.txt  graphic_buffer.c  ui_surface.c
framework/display/libdisplay/ui_service/: CMakeLists.txt  gesture_manager.c  input_dispatcher.c  input_recorder.c  input_recorder_buffer.c  input_recorder_slide_fixedstep.c  input_recorder_stream.c  ui_service.c  ui_service_inner.h  view_animation.c  view_manager.c  view_manager_gui.c  view_manager_inner.h
framework/display/lvgl/: CMakeLists.txt  lvgl_img_loader.c  lvgl_memory.c
framework/display/memory/: CMakeLists.txt  Kconfig  Kconfig.GUI  font_mempool.c  gui_text_cache.c  res_mempool.c  ui_mem_pool.c  ui_mem_slab.c
framework/display/ui_service/: CMakeLists.txt  gesture.c  msgbox_cache_lvgl.c  view_cache.c  view_stack.c
framework/media/: CMakeLists.txt  Kconfig  codec_config.c  media.lib  media_303ah.lib  media_effect_param.c  media_mem.c  media_player.c
framework/media/include/: audio_processor.h  btcall_processor_dsp.h  media_audio_stream.h  media_bt_dsp_xfer.h  media_effect_param.h  media_mem.h  media_player.h  media_service.h  media_type.h  music_postprocessor_dsp.h
framework/media/libal/: Kconfig
framework/media/libal_cuckoo/: CMakeLists.txt  a1_res_s_p.lib
framework/ota/: CMakeLists.txt  Kconfig  ota.lib  ota_backend_bt.c  ota_backend_sdcard.c  ota_backend_temp_part.c  ota_backend_usbhid.c  ota_storage.c  spp_test_backend.c
framework/ota/include/: ota_backend.h  ota_backend_usbhid.h  ota_breakpoint.h  ota_manifest.h  ota_storage.h  ota_upgrade.h
framework/usb/: CMakeLists.txt  Kconfig  usb_custom_handler.c  usb_custom_hid_info.c  usb_device.c
framework/usb/class/audio/: Kconfig
framework/usb/class/hid/: Kconfig
framework/usb/include/usb/: usb_common.h  usb_custom_handler.h  usb_custom_hid_info.h  usb_device.h
framework/usb/xear/: Kconfig  Makefile  xear_led_ctrl.c
framework/usb/xear/lib/: Kconfig
zephyr/soc/arm/actions/cuckoo/: power.c  (+42 more)
(+911 files in other folders)
